figure out that rails 5 needs to be run in production, even locally. Errors ensue otherwise

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: Prototypical_production
-  username: Prototypical
-  password: <%= ENV['PROTOTYPICAL_DATABASE_PASSWORD'] %>
+  username: max
+  password: 
